# Panda

./: .editorconfig  .gitignore  CMakeLists.txt  Panda.pro  Panda.qrc  PandaGUI.pro  README.md  main.cpp  panda.pro  panda.qrc  panda.rc  pandaGUI.pro
core/: CMakeLists.txt  PandaCore.pro  pandaCore.pro
core/panda/: BaseClass.cpp  BaseClass.h  BaseData.cpp  BaseData.h  CreateGroup.cpp  CreateGroup.h  Data.h  Data.inl  DataAccessor.h  DataCopier.cpp  DataCopier.h  DataFactory.cpp  DataFactory.h  DataNode.cpp  DataNode.h  Dockable.cpp  Dockable.h  GenericObject.cpp  GenericObject.h  Group.cpp  Group.h  GroupsManager.cpp  GroupsManager.h  Layer.cpp  Layer.h  OGLObject.cpp  OGLObject.h  ObjectFactory.cpp  ObjectFactory.h  PandaDocument.cpp  PandaDocument.h  PandaObject.cpp  PandaObject.h  PluginsManager.cpp  PluginsManager.h  Renderer.cpp  Renderer.h  Scheduler.cpp  Scheduler.h  SimpleGUI.cpp  (+15 more)
modules/: CMakeLists.txt  PandaModules.pro  Replicator.cpp  TestObjects.cpp  mainModule.cpp  module.pri
modules/AngelScript/: AS_Object.cpp  AS_Object.h  CMakeLists.txt  DataWrapper.cpp  DataWrapper.h  ObjectWrapper.cpp  ObjectWrapper.h  ScriptEngine.cpp  ScriptEngine.h  Types.cpp  Types.h  angelScriptModule.cpp
modules/Box2D/: Bodies.cpp  CMakeLists.txt  Particles.cpp  World.cpp  World.h
modules/Filesystem/: CMakeLists.txt  EnumerateFiles.cpp  FileInfo.cpp  PathManipulation.cpp  filesystemModule.cpp
modules/ImGui/: CMakeLists.txt  ImGuiBase.h  ImGuiData.cpp  ImGuiDataEdit.cpp  ImGuiDataVisualize.cpp  ImGuiObject.cpp  ImGuiWindow.cpp  ImGuiWrapper.cpp  ImGuiWrapper.h
modules/Images/: CMakeLists.txt  ImageExtensions.cpp  LoadImage.cpp  ResizeImage.cpp  SaveImage.cpp  imagesModule.cpp  utils.cpp  utils.h
modules/List/: CMakeLists.txt  Concatenation.cpp  Condition.cpp  DataCounter.cpp  DeleteItems.cpp  ExtractHead.cpp  ExtractTail.cpp  FillList.cpp  FilterItems.cpp  FindItem.cpp  IndicesOperations.cpp  InterleaveSequence.cpp  List.pro  ListBuffer.cpp  ListEqual.cpp  ListItem.cpp  ListLoop.cpp  ListMinMax.cpp  ListReverse.cpp  ListSize.cpp  RemoveDuplicates.cpp  ReplaceItem.cpp  SortList.cpp  Switch.cpp  VectorsListTranspose.cpp  listModule.cpp
modules/MainModules/: CMakeLists.txt  MainModules.pro  Replicator.cpp  mainModule.cpp
modules/Meshes/: CMakeLists.txt  Centroids.cpp  ComposeMesh.cpp  Delaunay.cpp  FindTriangle.cpp  Grid.cpp  MarchingSquares.cpp  MergeMeshes.cpp  MeshInfo.cpp  MeshMath.cpp  Meshes.pro  Neighbors.cpp  Relaxation.cpp  Voronoi.cpp  meshesModule.cpp
modules/Particles/: CMakeLists.txt  ParticleCollision.cpp  ParticleCreation.cpp  ParticleDestruction.cpp  ParticleEffector.h  ParticleEngine.cpp  ParticleEngine.h  ParticleForceField.cpp  Particles.pro
modules/Paths/: BezierSpline.cpp  CMakeLists.txt  CubicBSpline.cpp  Extrude.cpp  PathMath.cpp  Paths.pro  PolygonOperations.cpp  SimplePaths.cpp  pathsModule.cpp
modules/Polygons/: CMakeLists.txt  ClipperOperations.cpp  ClipperUtils.cpp  ClipperUtils.h  ComposePolygon.cpp  ConnectSegments.cpp  MeshToPolygon.cpp  PolygonMath.cpp  PolygonOperations.cpp  Polygons.pro  PolygonsToIndices.cpp  PolygonsTopology.cpp  SimplePolygons.cpp  Triangulation.cpp  Voronoi.cpp  polygonsModule.cpp
modules/Render/: CMakeLists.txt  RenderCircle.cpp  RenderConvexPolygon.cpp  RenderDisk.cpp  RenderFill.cpp  RenderImage.cpp  RenderLine.cpp  RenderMesh.cpp  RenderRect.cpp  RenderSprite.cpp  RenderText.cpp  RenderTriangle.cpp  renderModule.cpp
modules/ShaderEffects/: CMakeLists.txt  Enblend.cpp  GaussianBlur.cpp  GaussianPyramid.cpp  MergeImages.cpp  ShaderEffects.cpp  ShaderEffects.h  ShaderEffects.pro  ShaderEffects.qrc  SimpleResize.cpp  TextureProduct.cpp
modules/Text/: CMakeLists.txt  FontsCache.cpp  FontsCache.h  RenderText.cpp  TextPosition.cpp  TextureFont.cpp  TextureFont.h  textModule.cpp
modules/UserInteraction/: CMakeLists.txt  EditShape.cpp  MouseClicks.cpp  MouseEventsReceiver.cpp  MouseEventsReceiver.h  MoveShape.cpp  Selection.cpp  UserInteraction.pro
modules/UserValue/: CMakeLists.txt  LoadValue.cpp  LoadValue.h  StoreValue.cpp  StoreValue.h  UserValue.cpp  UserValue.h  UserValue.pro
modules/animation/: AnimLength.cpp  AnimValue.cpp  Interpolation.cpp  List2Anim.cpp
modules/generators/: UserValue.cpp  UserValue.h
modules/list/: Concatenation.cpp  Condition.cpp  DeleteItems.cpp  ExtractHead.cpp  ExtractTail.cpp  FillList.cpp  FilterItems.cpp  FindItem.cpp  InterleaveSequence.cpp  ListBuffer.cpp  ListItem.cpp  ListReverse.cpp  ListSize.cpp  ModifyList.cpp  RemoveDuplicates.cpp  ReplaceItem.cpp  SortList.cpp
modules/particles/: Particle.h  ParticleCreation.cpp  ParticleDestruction.cpp  ParticleEffector.h  ParticleEngine.cpp  ParticleEngine.h  ParticleForceField.cpp
modules/render/: RenderCircle.cpp  RenderDisk.cpp  RenderFill.cpp  RenderGradient.cpp  RenderImage.cpp  RenderLine.cpp  RenderMesh.cpp  RenderPolygon.cpp  RenderRect.cpp  RenderSprite.cpp  RenderText.cpp  RenderTriangle.cpp
ui/: AnimationDataWidgetDialog.h  Annotation.cpp  Annotation.h  CMakeLists.txt  ChooseWidgetDialog.cpp  CreateGroup.cpp  CreateGroup.h  DataWidget.h  DataWidgetFactory.cpp  DataWidgetFactory.h  DatasEditDialog.cpp  DatasEditDialog.h  DatasTable.cpp  DatasTable.h  DetachableTabWidget.cpp  DetachableTabWidget.h  DockableDrawStruct.cpp  DockableDrawStruct.h  EditGradientDialog.cpp  EditGroupDialog.cpp  EditGroupDialog.h  GenericObjectDrawStruct.cpp  GenericObjectDrawStruct.h  GraphView.cpp  GraphView.h  GroupObjectDrawStruct.cpp  GroupObjectDrawStruct.h  GroupsManager.cpp  GroupsManager.h  ImageViewport.cpp  ImageViewport.h  LayersTab.cpp  LayersTab.h  LinkTag.cpp  LinkTag.h  ListDataWidgetDialog.cpp  ListDataWidgetDialog.h  ListObjectsAndTypes.cpp  ListObjectsAndTypes.h  MainWindow.cpp  (+27 more)
ui/command/: AddObjectCommand.cpp  AddObjectCommand.h  CommandId.cpp  CommandId.h  CreateGroupCommand.cpp  CreateGroupCommand.h  CreateObjectCommand.cpp  CreateObjectCommand.h  DeleteObjectCommand.cpp  DeleteObjectCommand.h  DetachDockableCommand.cpp  GroupCommand.cpp  (+17 more)
viewer/: CMakeLists.txt  SimpleGUIImpl.cpp  SimpleGUIImpl.h  main.cpp
(+720 files in other folders)
